style.css
#datepick {
	width: 25%;
	float: left;
}
#datepick #header {
	font-size: 24px;
	text-align: center;
	padding: 10px;
	width: 80%;
	margin: 0 auto;
}
#datepick #btn-prev {
	float: left;
	margin-left: 10%;
}
#datepick #btn-next {
	float: right;
	margin-right: 10%;
}
#datepick #btn-prev:hover,#btn-next:hover {
	background-color: lime;
	border-radius: 10px;
	cursor: pointer;
}
#datepick #current-month:hover {
	text-decoration: underline;
}
#datepick table {
	border-collapse: collapse;
	margin: 0 auto;
	width: 80%;
}
#datepick th,td {
	border: solid 1px black;
	text-align: center;
	padding-top: 10px;
	padding-bottom: 10px;
	width: 10%;
}
#datepick th {
	border-bottom: solid 3px black;
	background-color: lightgray;
}
#datepick td.curr-month {
}
#datepick td.curr-month:hover {
	background-color: gray;
	color: white;
	cursor: pointer;
}
#datepick td.other-month {
	color: gray;
}

#timepick {
	/* width: 15%; */
	float: left;
}
#timepick #selected-date {
	font-size: 24px;
	padding: 10px;
}
#timepick input {
	color: black;
	background-color: white;
	border: none;
}

#canvas {
	border: solid 1px;
}

